--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,14 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+# Testing directory
+/testing/
+
+# Reference directory
+/ref/
+
+# Build directories
+/build/
+/dist/
+/powerschool_data_helper.egg-info/
